<resources>
    <string name="app_name">Raak</string>
    <string name="Skip">Skip</string>
    <string name="log_in_as_a_visitor">Log in as a visitor</string>
    <string name="customer_login">Customer Login</string>
    <string name="number_phone">number phone</string>
    <string name="password">password</string>
    <string name="forget_password">forget password...?</string>
    <string name="agree_to_the_terms_and_conditions">Agree to the terms and conditions</string>
    <string name="sign_in">sign in</string>
    <string name="send">Send</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="new_password">new Password</string>
    <string name="conform_password">Conform Password</string>
    <string name="please_enter_send_code">Please Enter Send Code</string>
    <string name="Home">Home</string>
    <string name="Repire">Repire</string>
    <string name="Recusetes">Recusetes</string>
    <string name="Erorrphone">please Enter your number phone</string>
    <string name="erorrphone_length">Enter the correct mobile number</string>
    <string name="passworderorr">Please Enter your password</string>
    <string name="unit_number">unit number :</string>
    <string name="location">Location :</string>
    <string name="Agree">\"Please Agree \"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="communicate">communicate</string>
    <string name="name">name</string>
    <string name="message">message</string>
    <string name="Holiday_type">Holiday type</string>
    <string name="saudi_raak_company">Saudi RAAK company</string>
    <string name="contact_us">Contact Us</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="log_out">Log Out</string>
    <string name="raak">Raak</string>
    <string name="are_you_sure_you_want_to_call">Are you sure you want to call</string>
    <string name="Contract_beginning">Contract beginning</string>
    <string name="Contract_ending">Contract ending</string>
    <string name="view_the_terms_and_conditions">View the terms and conditions</string>
    <string name="next">Next</string>
    <string name="choose_from_camera">choose from camera</string>
    <string name="cancel">Cancel</string>
    <string name="to_date">to Date</string>
    <string name="from_date">From Date</string>
    <string name="select">Select</string>
    <string name="chose_from_gallery">Chose From Gallery</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_date">Select Date</string>
    <string name="upload_photo">upload photo</string>
    <string name="description_of_the_damage">description of the damage</string>
    <string name="chose_damage_type">Chose Damage type</string>
    <string name="text_chose_location_damage">Chose Location Damage</string>
    <string name="meassagecallthis">سيقوم احد موظفينا بالتواصل \n</string>
    <string name="you">\"معكم \"</string>
    <string name="selected_okay">Picture selected</string>
    <string name="please_wait">please wait....</string>
    <string name="damage_cause">Damage cause :</string>

</resources>