<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:text="@string/raak"
    android:textSize="@dimen/_15sdp"
    android:fontFamily="@font/droidkufi_bold"
    android:textColor="@color/black"
    android:layout_marginTop="@dimen/_10sdp"
    android:id="@+id/nameapp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_call"
        android:fontFamily="@font/droidkufi_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameapp"
        android:textSize="@dimen/_13sdp"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:id="@+id/descrption"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#A7D7FC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descrption"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/view"/>
  <LinearLayout
      android:gravity="center"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/view"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginBottom="@dimen/_5sdp"
      app:layout_constraintEnd_toEndOf="parent"
      >
      <TextView
          android:layout_width="@dimen/_150sdp"
          android:layout_height="wrap_content"
          android:text="@string/yes"
          android:gravity="center"
          android:fontFamily="@font/droidkufi_bold"
          android:textSize="@dimen/_15sdp"
          android:id="@+id/yesone"
          android:textColor="#007AFF"/>
      <TextView
          android:gravity="center"
          android:layout_width="@dimen/_150sdp"
          android:layout_height="wrap_content"
          android:text="@string/no"
          android:fontFamily="@font/droidkufi_bold"
          android:textSize="@dimen/_15sdp"
          android:id="@+id/no"
          android:textColor="#007AFF"/>

  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>