<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/itwmsendinformation">
    <EditText
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/item_backgruond_area"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/name"
        android:hint="@string/name"
        android:textColorHint="@color/white"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:textColor="@color/white"
        android:background="@drawable/item_backgruond_area"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/number"
        android:hint="@string/number_phone"
        android:textColorHint="@color/white"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/item_backgruond_area"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/number"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/message"
        android:hint="@string/message"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#A7D7FC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:id="@+id/view"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        app:layout_constraintTop_toBottomOf="@id/view"
        android:textColor="@color/white"
        android:fontFamily="@font/droidkufi_bold"
        android:gravity="center"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_5sdp"
        android:id="@+id/send"/>
</androidx.constraintlayout.widget.ConstraintLayout>