<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".Login">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:scaleX="1.5"
            android:scaleY="2"
            android:layout_height="@dimen/_140sdp"

            android:src="@drawable/raaklogo"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:fontFamily="@font/droidkufi_bold"
            android:layout_width="match_parent"
            android:inputType="number"
            android:gravity="start|center"
            android:layout_height="@dimen/_45sdp"
            android:paddingStart="@dimen/_8sdp"
            android:textSize="@dimen/_15sdp"
            android:background="@drawable/style_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:hint="@string/number_phone"
            android:textColorHint="#707070"
            android:textColor="#181D3D"
            android:id="@+id/numberphone" />

        <EditText
            android:fontFamily="@font/droidkufi_bold"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:paddingStart="@dimen/_8sdp"
            android:gravity="start|center"
            android:background="@drawable/style_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@id/numberphone"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:hint="@string/password"
            android:textSize="@dimen/_15sdp"
            android:textColorHint="#707070"
            android:textColor="#181D3D"
            android:id="@+id/password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/droidkufi_bold"
            android:text="@string/forget_password"
            android:id="@+id/forgetpassword"
            android:textColor="#181D3D"
            app:layout_constraintEnd_toEndOf="@id/password"
            app:layout_constraintTop_toBottomOf="@id/password"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_13sdp"
            android:layout_marginEnd="@dimen/_10sdp" />

        <RadioButton
            android:textColor="#007AFF"
            android:buttonTint="#007AFF"
            android:text="@string/agree_to_the_terms_and_conditions"
            android:id="@+id/yes"
            android:fontFamily="@font/droidkufi_bold"
            android:textSize="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgetpassword"
            android:layout_marginStart="15dp"
            android:layout_marginTop="@dimen/_15sdp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:fontFamily="@font/droidkufi_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/yes"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/sign_in"

            android:textColor="@color/white"

            app:backgroundTint="@null"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:backgroundTintMode="add"
            android:background="@drawable/itembuttonlogin"
            android:textSize="@dimen/_15sdp"
            android:textAllCaps="false"

            android:id="@+id/loginone" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_180sdp"
            android:src="@drawable/logounder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>