<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/itwmsendinformation"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<TextView
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_marginStart="@dimen/_5sdp"
    android:layout_marginEnd="@dimen/_5sdp"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_50sdp"
    android:text="@string/from_date"
    android:gravity="start|center"
    android:padding="@dimen/_10sdp"
    android:fontFamily="@font/droidkufi_bold"
    android:textColor="@color/white"
    android:textSize="@dimen/_15sdp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:id="@+id/fromdate"
    android:background="@drawable/item_backgruond_area"/>
    <TextView
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:text="@string/to_date"
        android:gravity="start|center"
        android:padding="@dimen/_10sdp"
        android:fontFamily="@font/droidkufi_bold"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/fromdate"
        android:id="@+id/todate"
        android:background="@drawable/item_backgruond_area"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/todate"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/white"
        android:id="@+id/view"/>
    <TextView
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:fontFamily="@font/droidkufi_bold"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view"
        android:id="@+id/okay"
       />
</androidx.constraintlayout.widget.ConstraintLayout>