<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto">
<TextView
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/choose_from_camera"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:textSize="@dimen/_20sdp"
    android:gravity="center"
    android:padding="@dimen/_5sdp"
    android:layout_marginTop="@dimen/_10sdp"
    android:fontFamily="@font/droidkufi_bold"
    android:textColor="#007AFF"
    android:id="@+id/camera"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/camera"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="#007AFF"
        android:id="@+id/view"/>
    <TextView
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chose_from_gallery"
       app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_20sdp"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/droidkufi_bold"
        android:textColor="#007AFF"
        android:id="@+id/Gallrey"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Gallrey"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="#007AFF"
        android:id="@+id/view2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_20sdp"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/droidkufi_bold"
        android:textColor="#007AFF"
        android:id="@+id/cancel"/>
</androidx.constraintlayout.widget.ConstraintLayout>