<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".SplashScreenOne">

        <TextView
            android:fontFamily="@font/droidkufi_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Skip"
            android:textColor="#181D3D"
            android:textSize="23dp"
            android:id="@+id/Skip"
            android:textAllCaps="false"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="22dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:scaleX="1.5"
            android:scaleY="2"
            android:layout_height="@dimen/_150sdp"

            android:src="@drawable/raaklogo"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Skip" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:fontFamily="@font/droidkufi_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/log_in_as_a_visitor"

            android:textColor="@color/white"

            app:backgroundTint="@null"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:backgroundTintMode="add"
            android:background="@drawable/itembuttonlogin"
            android:textSize="@dimen/_15sdp"
            android:textAllCaps="false"

            android:id="@+id/loginone" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:fontFamily="@font/droidkufi_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginone"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/customer_login"
            android:includeFontPadding="false"
            android:textColor="#181D3D"
            android:textStyle="bold"
            app:backgroundTint="@null"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:backgroundTintMode="add"
            android:background="@drawable/style_button"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:id="@+id/logintoo" />

        <ImageView
            android:id="@+id/logounder"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:src="@drawable/logounder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>