<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateRepire">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/con"
            android:layout_width="match_parent"
            android:background="@drawable/item_backgruond_maintenance"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">


            <LinearLayout
                android:id="@+id/lone"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textnumber"
                    android:text="@string/unit_number"
                    android:textSize="@dimen/_15sdp"
                    android:fontFamily="@font/droidkufi_bold"
                    android:textColor="#007AFF" />

                <TextView
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/number"
                    android:text="239489237"
                    android:textSize="@dimen/_15sdp"
                    android:fontFamily="@font/droidkufi_bold"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ltwo"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintTop_toBottomOf="@id/lone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textlocation"
                    android:text="@string/location"
                    android:textSize="@dimen/_15sdp"
                    android:fontFamily="@font/droidkufi_bold"
                    android:textColor="#007AFF" />

                <TextView
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/location"
                    android:text="sakdkx;wjqlxljxkn"
                    android:textSize="@dimen/_15sdp"
                    android:fontFamily="@font/droidkufi_bold"
                    android:textColor="@color/black" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chose_damage_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/con"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:textSize="@dimen/_15sdp"
            android:textColor="#007AFF"
            android:id="@+id/texttype"
            android:fontFamily="@font/droidkufi_bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/itemrecfinsh"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/texttype"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_10sdp"
            android:id="@+id/rec" />

        <View
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="#A7D7FC"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rec"
            android:id="@+id/view" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:id="@+id/l1"
            tools:ignore="Orientation">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                tools:ignore="SpeakableTextPresentCheck" />

            <View
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:background="#A7D7FC"
                android:layout_height="@dimen/_1sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_photo"
                android:padding="@dimen/_5sdp"
                android:gravity="start|center"
                android:fontFamily="@font/droidkufi_bold"
                android:textSize="@dimen/_13sdp"
                android:textColor="#007AFF"
                android:layout_marginTop="@dimen/_5sdp"
                android:drawableEnd="@drawable/picture"
                android:id="@+id/image" />

            <View
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:background="#A7D7FC"
                android:layout_height="@dimen/_1sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_date"
                android:padding="@dimen/_5sdp"
                android:fontFamily="@font/droidkufi_bold"
                android:gravity="start|center"
                android:textSize="@dimen/_13sdp"
                android:textColor="#007AFF"
                android:layout_marginTop="@dimen/_5sdp"
                android:drawableEnd="@drawable/calendar"
                android:id="@+id/datatime" />

            <View
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:background="#A7D7FC"
                android:layout_height="@dimen/_1sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_of_the_damage"
                android:fontFamily="@font/droidkufi_bold"
                android:padding="@dimen/_5sdp"
                android:gravity="start|center"
                android:textSize="@dimen/_15sdp"
                android:textColor="#007AFF"
                android:layout_marginTop="@dimen/_5sdp"

                android:id="@+id/textmessage" />

            <EditText
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_60sdp"
            android:padding="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/l1"

            android:fontFamily="@font/droidkufi_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/_50sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/next"

            android:textColor="@color/white"

            app:backgroundTint="@null"
            android:background="@drawable/itemstilysend"
            app:backgroundTintMode="add"

            android:textSize="@dimen/_19sdp"
            android:textAllCaps="false"

            android:id="@+id/loginone" />
</androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>